test/Fail/Crash.err
Crash.agda:21.9-13: error: [UnequalTerms]
N !=< B
when checking that the expression zero has type F false
